--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,17 @@
+#------------------------------------------------------------
+# Global
+#------------------------------------------------------------
 unbind C-b
 set -g prefix C-t
 set -g default-shell /bin/zsh
+setw -g utf8 on
+setw -g mode-keys vi
 
 
-# Windoj Controll
+
+#------------------------------------------------------------
+# Window Controll
+#------------------------------------------------------------
 bind C-t next-window
 bind c new-window
 bind -n C-right next-window
@@ -14,7 +22,11 @@ bind -r C-l resize-pane -R 5
 bind -r C-j resize-pane -D 5
 bind -r C-k resize-pane -U 5
 
-# Pane controll
+
+
+#------------------------------------------------------------
+# Pane Controll
+#------------------------------------------------------------
 bind -n S-left select-pane -L
 bind -n S-down select-pane -D
 bind -n S-up select-pane -U
@@ -24,27 +36,13 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+
+
+#------------------------------------------------------------
 # Views
+#------------------------------------------------------------
 set -g status-bg black
 set -g status-fg white
-#set -g status-attr dim
-#set -g message-attr bold
-#set -g message-fg white
-#set -g message-bg red
-# #
-# #set -g status-left '#[fg=cyan, bold][#14H:#S]#[default]]'
-# #set -g status-right '|#[fg=magenta, bold]#(load.sh)#[default]| #[fg=blue, bold][%a %m/%d %H:%M]#[default]'
-# #set -g message-attr bold
-# set -g pane-active-border-fg cyan
-# set -g pane-active-border-bg black
-# setw -g window-status-current-fg blue
-# setw -g mode-bg white
-# setw -g mode-fg black
-# setw -g window-status-fg white
-# setw -g window-status-bg black
-# setw -g window-status-current-bg black
-# setw -g window-status-current-fg green
-#
 set -g status on
 set -g status-interval 2
 set -g status-utf8 on
@@ -55,17 +53,20 @@ set -g status-left "#(~/dotfiles/.tmux.d/tmux-powerline/status-left.sh)"
 set -g status-right "#(~/dotfiles/.tmux.d/tmux-powerline/status-right.sh)"
 source-file ~/dotfiles/.tmux.d/tmux-colors-solarized/tmuxcolors-dark.conf
 
-# Writing
-setw -g utf8 on
-setw -g mode-keys vi
 
-# Vi Copymode
+
+#------------------------------------------------------------
+# Edit mode
+#------------------------------------------------------------
 bind v copy-mode
 bind p paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 
+
+
+#------------------------------------------------------------
 # Reload settings
+#------------------------------------------------------------
 bind r source-file ~/.tmux.conf; display-message "config reloaded"
 bind S setw synchronize-panes
-
