--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,7 @@ bind c new-window
 bind -n C-right next-window
 bind -n C-left previous-window
 bind -n C-up new-window
+bind -n C-down kill-window
 bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
 bind -r C-j resize-pane -D 5
