--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,19 +1,15 @@
-#------------------------------------------------------------
-# Global
-#------------------------------------------------------------
+#
+# tmux settings @rksz
+#
+########################################
+
+## Global ##
 unbind C-b
 set -g prefix C-t
 set -g default-shell /bin/zsh
 setw -g utf8 on
-setw -g mode-keys vi
 
-
-
-#------------------------------------------------------------
-# Window Controll
-#------------------------------------------------------------
-bind C-t next-window
-bind c new-window
+## Window Controll ##
 bind -n C-right next-window
 bind -n C-left previous-window
 bind -n C-up new-window
@@ -23,11 +19,7 @@ bind -r C-l resize-pane -R 5
 bind -r C-j resize-pane -D 5
 bind -r C-k resize-pane -U 5
 
-
-
-#------------------------------------------------------------
-# Pane Controll
-#------------------------------------------------------------
+## Pane Controll ##
 bind -n S-left select-pane -L
 bind -n S-down select-pane -D
 bind -n S-up select-pane -U
@@ -37,11 +29,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-
-
-#------------------------------------------------------------
-# Views
-#------------------------------------------------------------
+## Views ##
 set -g status-bg black
 set -g status-fg white
 set -g status on
@@ -54,20 +42,13 @@ set -g status-left "#(~/dotfiles/.tmux.d/tmux-powerline/status-left.sh)"
 set -g status-right "#(~/dotfiles/.tmux.d/tmux-powerline/status-right.sh)"
 source-file ~/dotfiles/.tmux.d/tmux-colors-solarized/tmuxcolors-dark.conf
 
-
-
-#------------------------------------------------------------
-# Edit mode
-#------------------------------------------------------------
+## Edit mode ##
+setw -g mode-keys vi
 bind v copy-mode
 bind p paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 
-
-
-#------------------------------------------------------------
-# Reload settings
-#------------------------------------------------------------
+## Reload settings ##
 bind r source-file ~/.tmux.conf; display-message "config reloaded"
 bind S setw synchronize-panes
