--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -117,7 +117,13 @@ endif
 set tags=tags
 set tags+=~/.tags
 "let Tlist_Ctags_Cmd = '/Applications/MacVim.app/Contents/MacOS/ctags' " ctagsのパス
-let Tlist_Ctags_Cmd = '/usr/local/bin/ctags' " ctagsのパス
+
+if OSTYPE == "Darwin\n"
+  let Tlist_Ctags_Cmd = '/usr/local/bin/ctags' " ctagsのパス
+elseif OSTYPE == "Linux\n"
+  let Tlist_Ctags_Cmd = '/usr/bin/ctags' " ctagsのパス
+endif
+
 let Tlist_Show_One_File = 1               " 現在編集中のソースのタグしか表示しない
 let Tlist_Exit_OnlyWindow = 1             " taglistのウィンドーが最後のウィンドーならばVimを閉じる
 let Tlist_Use_Right_Window = 1            " 右側でtaglistのウィンドーを表示
