prepared to local tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,3 +52,6 @@ bind -t vi-copy y copy-selection
 ## Reload settings ##
 bind r source-file ~/.tmux.conf; display-message "config reloaded"
 bind S setw synchronize-panes
+
+## Import local settings ##
+source-file ~/.tmux.conf.local
