--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".tmux.d/tmux-powerline"]
 	path = .tmux.d/tmux-powerline
 	url = https://github.com/rksz/tmux-powerline
+[submodule ".vim/bundle/neobundle.vim"]
+	path = .vim/bundle/neobundle.vim
+	url = git://github.com/Shougo/neobundle.vom
