--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
   url = https://github.com/rksz/tmux-powerline
 [submodule ".vim/bundle/neobundle.vim"]
   path = .vim/bundle/neobundle.vim
-  url = git://github.com/Shougo/neobundle.vom
+  url = git://github.com/Shougo/neobundle.vim
