--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,7 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind | split-window -h
 
 ## Views ##
 set -g status-bg black
