Changed: C-down kill-window -> kill-pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,13 +13,13 @@ setw -g utf8 on
 bind -n C-right next-window
 bind -n C-left previous-window
 bind -n C-up new-window
-bind -n C-down kill-window
 bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
 bind -r C-j resize-pane -D 5
 bind -r C-k resize-pane -U 5
 
 ## Pane Controll ##
+bind -n C-down kill-pane
 bind -n S-left select-pane -L
 bind -n S-down select-pane -D
 bind -n S-up select-pane -U
