--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,8 @@
 unbind C-b
 set -g prefix C-t
 set -g default-shell /bin/zsh
+set -g default-terminal "screen-256color"
+#set -g mode-mouse on
 setw -g utf8 on
 
 ## Window Controll ##
@@ -41,7 +43,7 @@ set -g status-left-length 120
 set -g status-right-length 90
 set -g status-left "#(~/dotfiles/.tmux.d/tmux-powerline/status-left.sh)"
 set -g status-right "#(~/dotfiles/.tmux.d/tmux-powerline/status-right.sh)"
-source-file ~/dotfiles/.tmux.d/tmux-colors-solarized/tmuxcolors-dark.conf
+#source-file ~/dotfiles/.tmux.d/tmux-colors-solarized/tmuxcolors-dark.conf
 
 ## Edit mode ##
 setw -g mode-keys vi
