Modified tmux conf for clipboard link (but it will need fix for attaching by linux machine except mac_osx)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,3 +58,7 @@ bind S setw synchronize-panes
 
 ## Import local settings ##
 source-file ~/.tmux.conf.local
+
+## Clipboard ##
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
