--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -189,6 +189,9 @@ xmap <silent> ie <Plug>CamelCaseMotion_ie
 nnoremap    [unite]   <Nop>
 nmap    ff [unite]
 "nmap    F [unite]
+let g:unite_enable_start_insert = 1
+
+
 
 nnoremap [unite]U  :<C-u>Unite -no-split<Space>
 
@@ -201,7 +204,7 @@ nnoremap <silent> [unite]b  :<C-u>Unite -no-split buffer<CR>
 " 常用セット
 nnoremap <silent> [unite]u  :<C-u>Unite -no-split buffer file_mru<CR>
 " 最近使用したファイル一覧
-nnoremap <silent> [unite]m  :<C-u>Unite -no-split file_mru<CR>
+nnoremap <silent> [unite]h  :<C-u>Unite -no-split file_mru<CR>
 " 現在のバッファのカレントディレクトリからファイル一覧
 nnoremap <silent> [unite]d  :<C-u>UniteWithBufferDir -no-split file<CR>
 
@@ -245,6 +248,20 @@ let g:unite_source_file_mru_limit = 200
 cnoremap UH Unite help<Enter>
 cnoremap UO Unite outline<Enter>
 
+
+"------------------------------------
+" vim-ref
+"------------------------------------
+"let g:ref_open = 'vsplit'
+let g:ref_phpmanual_path = $HOME . '/dotfiles/ref/php-chunked-xhtml'
+"let g:ref_refe_path = $HOME . '/bin/ruby-refm-1.9.3-dynamic-20120829'
+
+nnoremap <silent> [unite]p  :<C-u>Unite -no-split ref/phpmanual<CR>
+nnoremap <silent> [unite]R  :<C-u>Unite -no-split ref/refe<CR>
+
+
+
+
 "------------------------------------
 " quickrun.vim
 "------------------------------------
@@ -274,6 +291,8 @@ let NERDTreeShowHidden=1
 " taku-o/toggle.vim
 "------------------------------------
 let g:toggle_pairs = { 'todo':'prcss', 'prcss':'done', 'done':'todo' }
+
+
 
 
 
