Added quotefalse option for Japanese path

--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
 [core]
   excludesfile = ~/.gitignore  # globalな.gitignoreの指定
 #  autocrlf = input                 # CRLFを自動変換
+  quotepath = false
 [alias]
   st = status
   sh = show
