--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -237,6 +237,13 @@ let g:quickrun_config = {}
 " Pydiction
 "------------------------------------
 let g:pydiction_location = '~/.vim/bundle/pydiction/complete-dict'
+let g:quickrun_config.markdown = {
+      \ 'outputter' : 'null',
+      \ 'command'   : 'open',
+      \ 'cmdopt'    : '-a',
+      \ 'args'      : 'Marked',
+      \ 'exec'      : '%c %o %a %s',
+      \ }
 
 "------------------------------------
 " Syntastic
