Added new plugin: vim-submode

--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -275,3 +275,19 @@ nnoremap <C-d> <ESC>:bnext \| bdelete #<CR>
 nnoremap <C-n> :MBEbn<CR>
 nnoremap <C-p> :MBEbp<CR>
 nnoremap <Leader>e :enew<CR>
+
+
+"------------------------------------
+" submode.vim
+"------------------------------------
+" http://d.hatena.ne.jp/thinca/20130131/1359567419
+" ウィンドウサイズの変更キーを簡易化する
+" [C-w],[+]または、[C-w],[-]
+call submode#enter_with('winsize', 'n', '', '<C-w>>', '<C-w>>')
+call submode#enter_with('winsize', 'n', '', '<C-w><', '<C-w><')
+call submode#enter_with('winsize', 'n', '', '<C-w>+', '<C-w>-')
+call submode#enter_with('winsize', 'n', '', '<C-w>-', '<C-w>+')
+call submode#map('winsize', 'n', '', '>', '<C-w>>')
+call submode#map('winsize', 'n', '', '<', '<C-w><')
+call submode#map('winsize', 'n', '', '+', '<C-w>-')
+call submode#map('winsize', 'n', '', '-', '<C-w>+')
