Various update (color scheme and other)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,7 @@ setw -g utf8 on
 bind -n C-right next-window
 bind -n C-left previous-window
 bind -n C-up new-window
+bind N new-window
 bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
 bind -r C-j resize-pane -D 5
