Added aggressive resize

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ set -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 #set -g mode-mouse on
 setw -g utf8 on
+setw -g aggressive-resize on
 
 ## Window Controll ##
 bind -n C-right next-window
