--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -164,18 +164,34 @@ let g:unite_enable_start_insert = 1
 
 nnoremap [unite]U  :<C-u>Unite -no-split<Space>
 
+"" " 全部乗せ
+"" nnoremap <silent> [unite]a  :<C-u>UniteWithCurrentDir -no-split -buffer-name=files buffer file_mru bookmark file<CR>
+"" " ファイル一覧
+"" nnoremap <silent> [unite]f  :<C-u>Unite -no-split -buffer-name=files file<CR>
+"" " バッファ一覧
+"" nnoremap <silent> [unite]b  :<C-u>Unite -no-split buffer<CR>
+"" " 常用セット
+"" nnoremap <silent> [unite]u  :<C-u>Unite -no-split buffer file_mru<CR>
+"" " 最近使用したファイル一覧
+"" nnoremap <silent> [unite]h  :<C-u>Unite -no-split file_mru<CR>
+"" " 現在のバッファのカレントディレクトリからファイル一覧
+"" nnoremap <silent> [unite]d  :<C-u>UniteWithBufferDir -no-split file<CR>
+
 " 全部乗せ
-nnoremap <silent> [unite]a  :<C-u>UniteWithCurrentDir -no-split -buffer-name=files buffer file_mru bookmark file<CR>
+nnoremap <silent> [unite]a :<C-u>UniteWithCurrentDir -buffer-name=files buffer file_mru bookmark file<CR>
 " ファイル一覧
-nnoremap <silent> [unite]f  :<C-u>Unite -no-split -buffer-name=files file<CR>
+nnoremap <silent> [unite]f :<C-u>Unite -buffer-name=files file<CR>
 " バッファ一覧
-nnoremap <silent> [unite]b  :<C-u>Unite -no-split buffer<CR>
+nnoremap <silent> [unite]b :<C-u>Unite buffer<CR>
 " 常用セット
-nnoremap <silent> [unite]u  :<C-u>Unite -no-split buffer file_mru<CR>
+nnoremap <silent> [unite]u :<C-u>Unite buffer file_mru<CR>
 " 最近使用したファイル一覧
-nnoremap <silent> [unite]h  :<C-u>Unite -no-split file_mru<CR>
+nnoremap <silent> [unite]h :<C-u>Unite file_mru<CR>
 " 現在のバッファのカレントディレクトリからファイル一覧
-nnoremap <silent> [unite]d  :<C-u>UniteWithBufferDir -no-split file<CR>
+nnoremap <silent> [unite]d :<C-u>UniteWithBufferDir file<CR>
+
+
+
 
 " nnoremap <silent> [unite]b  :<C-u>UniteWithBufferDir -buffer-name=files buffer file_mru bookmark file<CR>
 
