Changed background color of the status bar & Added some pane-window control aliases

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 #
 # tmux settings @rksz
 #
-########################################
+ #######################################
 
 ## Global ##
 unbind C-b
@@ -10,12 +10,12 @@ set -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 #set -g mode-mouse on
 setw -g utf8 on
-setw -g aggressive-resize on
+# setw -g aggressive-resize on
 
 ## Window Controll ##
 bind -n C-right next-window
 bind -n C-left previous-window
-bind -n C-up new-window
+bind -n C-up new-window -n "new"
 bind N new-window
 bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
@@ -24,6 +24,7 @@ bind -r C-k resize-pane -U 5
 
 ## Pane Controll ##
 bind -n C-down kill-pane
+bind Down kill-window
 bind -n S-left select-pane -L
 bind -n S-down select-pane -D
 bind -n S-up select-pane -U
@@ -35,9 +36,9 @@ bind l select-pane -R
 bind | split-window -h
 
 ## Views ##
+set -g status on
 set -g status-bg black
 set -g status-fg white
-set -g status on
 set -g status-interval 2
 set -g status-utf8 on
 set -g status-justify "centre"
@@ -45,7 +46,9 @@ set -g status-left-length 120
 set -g status-right-length 90
 set -g status-left "#(~/dotfiles/.tmux.d/tmux-powerline/status-left.sh)"
 set -g status-right "#(~/dotfiles/.tmux.d/tmux-powerline/status-right.sh)"
-#source-file ~/dotfiles/.tmux.d/tmux-colors-solarized/tmuxcolors-dark.conf
+set -g window-status-current-attr bold
+set -g window-status-current-bg cyan
+set -g window-status-current-fg blue
 
 ## Edit mode ##
 setw -g mode-keys vi
