Removed tmux powerline and changed it simple.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,13 +42,17 @@ set -g status-fg white
 set -g status-interval 2
 set -g status-utf8 on
 set -g status-justify "centre"
-set -g status-left-length 120
+set -g status-left-length  90
 set -g status-right-length 90
-set -g status-left "#(~/dotfiles/.tmux.d/tmux-powerline/status-left.sh)"
-set -g status-right "#(~/dotfiles/.tmux.d/tmux-powerline/status-right.sh)"
+# set -g status-left "#(~/dotfiles/.tmux.d/tmux-powerline/status-left.sh)"
+# set -g status-right "#(~/dotfiles/.tmux.d/tmux-powerline/status-right.sh)"
+set -g status-left '#[fg=white,bg=black][#S]#[default]'
+set -g status-right '#[fg=white,bg=black] [%Y-%m-%d(%a) %H:%M]#[default]'
 set -g window-status-current-attr bold
-set -g window-status-current-bg cyan
-set -g window-status-current-fg blue
+set -g window-status-current-bg white
+set -g window-status-current-fg black
+# setw -g automatic-rename off
+
 
 ## Edit mode ##
 setw -g mode-keys vi
