Syntax highlight script for Mark-down was changed

--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -2,6 +2,13 @@
 " プラグインごとの設定 Plugins
 "-------------------------------------------------------------------------------
 
+
+"------------------------------------
+" vim-markdown
+"------------------------------------
+let g:vim_markdown_folding_disabled=1
+
+
 "------------------------------------
 " Align
 "------------------------------------
