--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -267,6 +267,13 @@ let g:quickrun_config.markdown = {
       \ 'args'      : 'Marked',
       \ 'exec'      : '%c %o %a %s',
       \ }
+let g:quickrun_config.mkd = {
+      \ 'outputter' : 'null',
+      \ 'command'   : 'open',
+      \ 'cmdopt'    : '-a',
+      \ 'args'      : 'Marked',
+      \ 'exec'      : '%c %o %a %s',
+      \ }
 
 "------------------------------------
 " Syntastic
