--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -466,4 +466,4 @@ let g:Powerline_colorscheme='my'
 "------------------------------------
 " neocomplecache
 "------------------------------------
-let g:neocomplcache_enable_insert_char_pre = 1
+" let g:neocomplcache_enable_insert_char_pre = 1
