Removed unnecessary keybinds

--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -36,11 +36,11 @@ let Grep_Skip_Files = '*.bak *~'
 " surround.vim
 "------------------------------------
 " s, ssで選択範囲を指定文字でくくる
-nmap s <Plug>Ysurround
-nmap ss <Plug>Yssurround
-let g:surround_{char2nr('e')} = "begin \r end"
-let g:surround_{char2nr('d')} = "do \r end"
-let g:surround_{char2nr("-")} = ":\r"
+"nmap s <Plug>Ysurround
+"nmap ss <Plug>Yssurround
+"let g:surround_{char2nr('e')} = "begin \r end"
+"let g:surround_{char2nr('d')} = "do \r end"
+"let g:surround_{char2nr("-")} = ":\r"
 
 "------------------------------------
 " Fugitive.vim
