--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,9 +8,13 @@ unbind C-b
 set -g prefix C-t
 set -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
-#set -g mode-mouse on
 setw -g utf8 on
 # setw -g aggressive-resize on
+
+#set -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
 
 ## Window Controll ##
 bind -n C-right next-window
@@ -62,6 +66,7 @@ bind -t vi-copy y copy-selection
 ## Reload settings ##
 bind r source-file ~/.tmux.conf; display-message "config reloaded"
 bind S setw synchronize-panes
+#bind M setw mode-mouse off
 
 ## Import local settings ##
 source-file ~/.tmux.conf.local
@@ -69,3 +74,4 @@ source-file ~/.tmux.conf.local
 ## Clipboard ##
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+
