Update color themes

--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -115,21 +115,21 @@ map E  <Plug>(smartword-e)
 map ge  <Plug>(smartword-ge)
 
 
-"------------------------------------
-" camelcasemotion.vim
-"------------------------------------
-" <Shift-wbe>でCameCaseやsnake_case単位での単語移動
-map <silent> w <Plug>CamelCaseMotion_w
-map <silent> b <Plug>CamelCaseMotion_b
-map <silent> e <Plug>CamelCaseMotion_e
-" text-objectで使用できるように
-omap <silent> iw <Plug>CamelCaseMotion_iw
-xmap <silent> iw <Plug>CamelCaseMotion_iw
-omap <silent> ib <Plug>CamelCaseMotion_ib
-xmap <silent> ib <Plug>CamelCaseMotion_ib
-omap <silent> ie <Plug>CamelCaseMotion_ie
-xmap <silent> ie <Plug>CamelCaseMotion_ie
-
+" "------------------------------------
+" " camelcasemotion.vim
+" "------------------------------------
+" " <Shift-wbe>でCameCaseやsnake_case単位での単語移動
+" map <silent> w <Plug>CamelCaseMotion_w
+" map <silent> b <Plug>CamelCaseMotion_b
+" map <silent> e <Plug>CamelCaseMotion_e
+" " text-objectで使用できるように
+" omap <silent> iw <Plug>CamelCaseMotion_iw
+" xmap <silent> iw <Plug>CamelCaseMotion_iw
+" omap <silent> ib <Plug>CamelCaseMotion_ib
+" xmap <silent> ib <Plug>CamelCaseMotion_ib
+" omap <silent> ie <Plug>CamelCaseMotion_ie
+" xmap <silent> ie <Plug>CamelCaseMotion_ie
+"
 "------------------------------------
 " unite.vim
 "------------------------------------
