--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,18 +60,20 @@ set -g window-status-current-fg black
 setw -g mode-keys vi
 bind v copy-mode
 bind p paste-buffer
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 ## Reload settings ##
-bind r source-file ~/.tmux.conf; display-message "config reloaded"
+#bind r source-file ~/.tmux.conf; display-message "config reloaded"
 bind S setw synchronize-panes
 #bind M setw mode-mouse off
 
 ## Import local settings ##
 source-file ~/.tmux.conf.local
-
-## Clipboard ##
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 
