Added Plugin: OpenBrower

--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -412,3 +412,13 @@ let g:Powerline#Colorschemes#my#colorscheme = Pl#Colorscheme#Init([
 let g:Powerline_colorscheme='my'
 
 
+
+"------------------------------------
+" open-blowser.vim
+"------------------------------------
+
+" カーソル下のURLをブラウザで開く
+nmap <Leader>fu <Plug>(openbrowser-open)
+vmap <Leader>fu <Plug>(openbrowser-open)
+" カーソル下のキーワードをググる
+nnoremap <Leader>fs :<C-u>OpenBrowserSearch<Space><C-r><C-w><Enter>
