--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,3 +77,7 @@ bind S setw synchronize-panes
 ## Import local settings ##
 source-file ~/.tmux.conf.local
 
+
+## Shortcutkey
+bind P send-keys 192.168.
+bind G send-keys "git pull origin master" C-m
