--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,7 +70,7 @@ unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 ## Reload settings ##
-#bind r source-file ~/.tmux.conf; display-message "config reloaded"
+bind r source-file ~/.tmux.conf; display-message "config reloaded"
 bind S setw synchronize-panes
 #bind M setw mode-mouse off
 
@@ -81,3 +81,6 @@ source-file ~/.tmux.conf.local
 ## Shortcutkey
 bind P send-keys 192.168.
 bind G send-keys "git pull origin master" C-m
+
+
+bind w command-prompt "split-window -p 65 'exec man %%'"
