--- a/.tmux.conf
+++ b/.tmux.conf
@@ -81,6 +81,7 @@ source-file ~/.tmux.conf.local
 ## Shortcutkey
 bind P send-keys 192.168.
 bind G send-keys "git pull origin master" C-m
+bind C run "tmux capture-pane -S -500; tmux show-buffer >>/tmp/tmuxcap_$(date '+%Y-%m-%d_%H-%M-%S').log"
 
-
+## Special Command
 bind w command-prompt "split-window -p 65 'exec man %%'"
