Refactoring unneeded vim plugins

--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -318,20 +318,20 @@ let NERDTreeShowHidden=1
 " hi MBEVisibleActiveChanged guifg=#F1266F guibg=fg
 "
 
-"------------------------------------
-" submode.vim
-"------------------------------------
-" http://d.hatena.ne.jp/thinca/20130131/1359567419
-" ウィンドウサイズの変更キーを簡易化する
-" [C-w],[+]または、[C-w],[-]
-call submode#enter_with('winsize', 'n', '', '<C-w>>', '<C-w>>')
-call submode#enter_with('winsize', 'n', '', '<C-w><', '<C-w><')
-call submode#enter_with('winsize', 'n', '', '<C-w>+', '<C-w>-')
-call submode#enter_with('winsize', 'n', '', '<C-w>-', '<C-w>+')
-call submode#map('winsize', 'n', '', '>', '<C-w>>')
-call submode#map('winsize', 'n', '', '<', '<C-w><')
-call submode#map('winsize', 'n', '', '+', '<C-w>-')
-call submode#map('winsize', 'n', '', '-', '<C-w>+')
+" "------------------------------------
+" " submode.vim
+" "------------------------------------
+" " http://d.hatena.ne.jp/thinca/20130131/1359567419
+" " ウィンドウサイズの変更キーを簡易化する
+" " [C-w],[+]または、[C-w],[-]
+" call submode#enter_with('winsize', 'n', '', '<C-w>>', '<C-w>>')
+" call submode#enter_with('winsize', 'n', '', '<C-w><', '<C-w><')
+" call submode#enter_with('winsize', 'n', '', '<C-w>+', '<C-w>-')
+" call submode#enter_with('winsize', 'n', '', '<C-w>-', '<C-w>+')
+" call submode#map('winsize', 'n', '', '>', '<C-w>>')
+" call submode#map('winsize', 'n', '', '<', '<C-w><')
+" call submode#map('winsize', 'n', '', '+', '<C-w>-')
+" call submode#map('winsize', 'n', '', '-', '<C-w>+')
 
 
 
@@ -474,3 +474,11 @@ nmap <Leader>fu <Plug>(openbrowser-open)
 vmap <Leader>fu <Plug>(openbrowser-open)
 " カーソル下のキーワードをググる
 nnoremap <Leader>fs :<C-u>OpenBrowserSearch<Space><C-r><C-w><Enter>
+
+
+
+" Start interactive EasyAlign in visual mode
+vmap <Enter> <Plug>(EasyAlign)
+
+" " Start interactive EasyAlign with a Vim movement
+nmap <Leader>a <Plug>(EasyAlign)
