add vim-operator again

--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -385,3 +385,9 @@ vmap <Enter> <Plug>(EasyAlign)
 
 " " Start interactive EasyAlign with a Vim movement
 nmap <Leader>a <Plug>(EasyAlign)
+
+
+"------------------------------------
+" operator replace
+"------------------------------------
+map R <Plug>(operator-replace)
