add quickhl plugin in vim

--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -391,3 +391,14 @@ nmap <Leader>a <Plug>(EasyAlign)
 " operator replace
 "------------------------------------
 map R <Plug>(operator-replace)
+
+
+
+"------------------------------------
+" quickhl
+"------------------------------------
+nmap <Space>m <Plug>(quickhl-manual-this)
+xmap <Space>m <Plug>(quickhl-manual-this)
+nmap <Space>M <Plug>(quickhl-manual-reset)
+xmap <Space>M <Plug>(quickhl-manual-reset)
+
