--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,12 +55,12 @@ set -g window-status-current-bg white
 set -g window-status-current-fg black
 # setw -g automatic-rename off
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 ## Edit mode ##
 setw -g mode-keys vi
 bind v copy-mode
 bind p paste-buffer
-
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
@@ -70,7 +70,7 @@ unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 ## Reload settings ##
-bind r source-file ~/.tmux.conf; display-message "config reloaded"
+# bind r source-file ~/.tmux.conf; display-message "config reloaded"
 bind S setw synchronize-panes
 #bind M setw mode-mouse off
 
