adds mvimdiff tool & outclude gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,8 @@
+[include]
+  path = ~/.gitconfig.local
 [user]
   name = Ricky
   email = master@mistdev.com
-[diff]
-  external=git_diff_wrapper
-[pager]
-  diff =
 [color]
   # colorの設定(以下のコマンドは自動で色つける)
   status = auto
