update a little bit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,7 @@ setw -g utf8 on
 ## Window Controll ##
 bind -n C-right next-window
 bind -n C-left previous-window
+bind p previous-window
 bind -n C-up new-window -n "new"
 bind N new-window
 bind -r C-h resize-pane -L 5
@@ -60,7 +61,7 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## Edit mode ##
 setw -g mode-keys vi
 bind v copy-mode
-bind p paste-buffer
+bind y paste-buffer
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
