add window control & pane control

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,27 +18,28 @@ setw -g utf8 on
 
 ## Window Controll ##
 bind -n C-right next-window
-bind -n C-left previous-window
-bind p previous-window
-bind -n C-up new-window -n "new"
-bind N new-window
-bind -r C-h resize-pane -L 5
-bind -r C-l resize-pane -R 5
-bind -r C-j resize-pane -D 5
-bind -r C-k resize-pane -U 5
+bind -n C-left  previous-window
+bind p          previous-window
+bind -n C-up    new-window -n "new"
+bind N          new-window
+bind Down       kill-window
+bind X          kill-window
+bind -r C-h     resize-pane -L 5
+bind -r C-l     resize-pane -R 5
+bind -r C-j     resize-pane -D 5
+bind -r C-k     resize-pane -U 5
 
 ## Pane Controll ##
-bind -n C-down kill-pane
-bind Down kill-window
-bind -n S-left select-pane -L
-bind -n S-down select-pane -D
-bind -n S-up select-pane -U
+bind -n C-down  kill-pane
+bind -n S-left  select-pane -L
+bind -n S-down  select-pane -D
+bind -n S-up    select-pane -U
 bind -n S-right select-pane -R
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind | split-window -h
+bind h          select-pane -L
+bind j          select-pane -D
+bind k          select-pane -U
+bind l          select-pane -R
+bind |          split-window -h
 
 ## Views ##
 set -g status on
