--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,9 +55,9 @@ set -g status-right '#[fg=white,bg=black] [%Y-%m-%d(%a) %H:%M]#[default]'
 set -g window-status-current-attr bold
 set -g window-status-current-bg white
 set -g window-status-current-fg black
-# setw -g automatic-rename off
+setw -g automatic-rename off
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
 
 ## Edit mode ##
 setw -g mode-keys vi
