update tmux command

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,7 @@ bind -n C-up    new-window -n "new"
 bind N          new-window
 bind Down       kill-window
 bind X          kill-window
+bind M          kill-window
 bind -r C-h     resize-pane -L 5
 bind -r C-l     resize-pane -R 5
 bind -r C-j     resize-pane -D 5
