--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,7 +84,7 @@ source-file ~/.tmux.conf.local
 ## Shortcutkey
 bind P send-keys 192.168.
 bind G send-keys "git pull origin master" C-m
-bind C run "tmux capture-pane -S -500; tmux show-buffer >>/tmp/console_$(date '+%Y%m%d-%H%M%S').log"
+bind C run "tmux capture-pane -S -500; tmux show-buffer >>#{pane_current_path}/console-$(date '+%Y%m%d%H%M%S').log"
 
 ## Special Command
 bind w command-prompt "split-window -p 65 'exec man %%'"
