--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,9 +56,8 @@ set -g status-right '#[fg=white,bg=black] [%Y-%m-%d(%a) %H:%M]#[default]'
 set -g window-status-current-attr bold
 set -g window-status-current-bg white
 set -g window-status-current-fg black
-setw -g automatic-rename off
-
-set-option -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
+set -g automatic-rename off
+set -g default-command "reattach-to-user-namespace -l zsh"
 
 ## Edit mode ##
 setw -g mode-keys vi
@@ -73,7 +72,7 @@ unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 ## Reload settings ##
-# bind r source-file ~/.tmux.conf; display-message "config reloaded"
+bind r source-file ~/.tmux.conf; display-message "config reloaded"
 bind S setw synchronize-panes
 #bind M setw mode-mouse off
 
