--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ unbind C-b
 set -g prefix C-t
 set -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
-setw -g utf8 on
+set -g utf8 on
 # setw -g aggressive-resize on
 
 #set -g mode-mouse on
@@ -32,6 +32,7 @@ bind -r C-k     resize-pane -U 5
 
 ## Pane Controll ##
 bind -n C-down  kill-pane
+bind m          kill-pane
 bind -n S-left  select-pane -L
 bind -n S-down  select-pane -D
 bind -n S-up    select-pane -U
@@ -59,11 +60,11 @@ set -g window-status-current-fg black
 set -g automatic-rename off
 set -g default-command "reattach-to-user-namespace -l zsh"
 
+
 ## Edit mode ##
-setw -g mode-keys vi
+set -g mode-keys vi
 bind v copy-mode
 bind y paste-buffer
-# Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
@@ -74,7 +75,7 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 ## Reload settings ##
 bind r source-file ~/.tmux.conf; display-message "config reloaded"
 bind S setw synchronize-panes
-#bind M setw mode-mouse off
+#bind M set mode-mouse off
 
 ## Import local settings ##
 source-file ~/.tmux.conf.local
