--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,6 +42,8 @@ bind j          select-pane -D
 bind k          select-pane -U
 bind l          select-pane -R
 bind |          split-window -h
+bind t          select-layout even-horizontal
+
 
 ## Views ##
 set -g status on
