change easy-align mapping

--- a/.vimrc.bundle.settings
+++ b/.vimrc.bundle.settings
@@ -372,8 +372,7 @@ vmap <Leader>fu <Plug>(openbrowser-open)
 "------------------------------------
 " easy align
 "------------------------------------
-vmap <Enter> <Plug>(EasyAlign)
-nmap <Leader>a <Plug>(EasyAlign)
+vmap E <Plug>(EasyAlign)
 
 
 "------------------------------------
