update tmux display pane alias

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,8 +42,8 @@ bind j          select-pane -D
 bind k          select-pane -U
 bind l          select-pane -R
 bind |          split-window -h
-bind t          select-layout even-horizontal
-
+bind e          select-layout even-horizontal
+bind t          display-panes
 
 ## Views ##
 set -g status on
