--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,8 +42,9 @@ bind j          select-pane -D
 bind k          select-pane -U
 bind l          select-pane -R
 bind |          split-window -h
-bind e          select-layout even-horizontal
+bind E          select-layout even-horizontal
 bind t          display-panes
+bind C-t        run "tmux last-pane || tmux last-window || tmux new-window"
 
 ## Views ##
 set -g status on
