update escape time in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@ set -g prefix C-t
 set -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 set -g utf8 on
+set -sg escape-time 1
 # setw -g aggressive-resize on
 
 #set -g mode-mouse on
