--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,8 +44,8 @@ bind k          select-pane -U
 bind l          select-pane -R
 bind |          split-window -h
 bind E          select-layout even-horizontal
-bind t          display-panes
-bind C-t        run "tmux last-pane || tmux last-window || tmux new-window"
+bind C-t        display-panes
+bind t          run "tmux last-pane || tmux last-window || tmux new-window"
 
 ## Views ##
 set -g status on
