--- a/.taskrc
+++ b/.taskrc
@@ -20,8 +20,9 @@ data.location=~/.task
 #include /usr/local/Cellar/task/2.3.0/share/doc/task/rc/dark-256.theme
 #include /usr/local/Cellar/task/2.3.0/share/doc/task/rc/dark-red-256.theme
 #include /usr/local/Cellar/task/2.3.0/share/doc/task/rc/dark-green-256.theme
-include /usr/local/Cellar/task/2.3.0/share/doc/task/rc/dark-blue-256.theme
+#include /usr/local/Cellar/task/2.3.0/share/doc/task/rc/dark-blue-256.theme
 #include /usr/local/Cellar/task/2.3.0/share/doc/task/rc/dark-violets-256.theme
-#include /usr/local/Cellar/task/2.3.0/share/doc/task/rc/dark-yellow-green.theme
+include /usr/local/Cellar/task/2.3.0/share/doc/task/rc/dark-yellow-green.theme
 #include /usr/local/Cellar/task/2.3.0/share/doc/task/rc/dark-gray-256.theme
 
+default.priority=L
