--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,7 +61,8 @@ set -g status-right '#[fg=white,bg=black] [%Y-%m-%d(%a) %H:%M]#[default]'
 set -g window-status-current-attr bold
 set -g window-status-current-bg white
 set -g window-status-current-fg black
-set -g pane-active-border-fg blue
+# set -g pane-active-border-fg blue
+set -g pane-active-border-bg blue
 set -g pane-border-fg white
 set -g automatic-rename off
 set -g default-command "reattach-to-user-namespace -l zsh"
