update git pull cmd

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,11 +87,7 @@ bind S setw synchronize-panes
 ## Import local settings ##
 source-file ~/.tmux.conf.local
 
-
 ## Shortcutkey
 bind P send-keys 192.168.
-bind G send-keys "git pull origin master" C-m
+bind G send-keys "git pull" C-m
 bind C run "tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/console-$(date '+%Y%m%d%H%M%S').log"
-
-## Special Command
-bind w command-prompt "split-window -p 65 'exec man %%'"
