put additional prompts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -90,4 +90,5 @@ source-file ~/.tmux.conf.local
 ## Shortcutkey
 bind P send-keys 192.168.
 bind G send-keys "git pull" C-m
-bind C run "tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/console-$(date '+%Y%m%d%H%M%S').log"
+#bind C run "tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/console-$(date '+%Y%m%d%H%M%S').log"
+bind C command-prompt -p "enter log prefix" "run-shell \"tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/%1-console-$(date '+%Y%m%d%H%M%S').log\""
