--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,24 @@ set -g utf8 on
 set -sg escape-time 1
 # setw -g aggressive-resize on
 
+# Less stretching to get to the first item.
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Shut up.
+set -g quiet on
+
+# DVTM style pane selection
+bind 1 select-pane -t 1
+bind 2 select-pane -t 2
+bind 3 select-pane -t 3
+bind 4 select-pane -t 4
+bind 5 select-pane -t 5
+bind 6 select-pane -t 6
+bind 7 select-pane -t 7
+bind 8 select-pane -t 8
+bind 9 select-pane -t 9
+bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
 #set -g mode-mouse on
 #set -g mouse-resize-pane on
 #set -g mouse-select-pane on
@@ -44,7 +62,8 @@ bind k          select-pane -U
 bind l          select-pane -R
 bind |          split-window -h
 bind E          select-layout even-horizontal
-bind C-t        display-panes
+# bind C-t        display-panes
+bind C-t        select-layout main-vertical
 bind t          run "tmux last-pane || tmux last-window || tmux new-window"
 
 ## Views ##
