update tmux select panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,12 @@ bind 6 select-pane -t 6
 bind 7 select-pane -t 7
 bind 8 select-pane -t 8
 bind 9 select-pane -t 9
+bind -n F1 select-pane -t 1
+bind -n F2 select-pane -t 2
+bind -n F3 select-pane -t 3
+bind -n F4 select-pane -t 4
+bind -n F5 select-pane -t 5
+bind -n F6 select-pane -t 6
 bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
 #set -g mode-mouse on
 #set -g mouse-resize-pane on
@@ -65,6 +71,7 @@ bind E          select-layout even-horizontal
 # bind C-t        display-panes
 bind C-t        select-layout main-vertical
 bind t          run "tmux last-pane || tmux last-window || tmux new-window"
+bind -n C-y     select-pane -t :.+
 
 ## Views ##
 set -g status on
