update tmux crop pane command

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,7 +58,7 @@ bind -r C-k     resize-pane -U 5
 ## Pane Controll ##
 bind -n C-down  kill-pane
 bind m          kill-pane
-bind w          kill-pane -a -t .
+bind o          kill-pane -a -t .
 bind -n S-left  select-pane -L
 bind -n S-down  select-pane -D
 bind -n S-up    select-pane -U
