change select-layout shortcut

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,7 +68,7 @@ bind j          select-pane -D
 bind k          select-pane -U
 bind l          select-pane -R
 bind |          split-window -h
-bind E          select-layout even-horizontal
+bind e          select-layout even-horizontal
 # bind C-t        display-panes
 bind C-t        select-layout main-vertical
 bind t          run "tmux last-pane || tmux last-window || tmux new-window"
