updates tmux zoom command

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,8 +70,10 @@ bind l          select-pane -R
 bind |          split-window -h
 bind e          select-layout even-horizontal
 # bind C-t        display-panes
-bind C-t        select-layout main-vertical
-bind t          run "tmux last-pane || tmux last-window || tmux new-window"
+#bind C-t        select-layout main-vertical
+#bind t          run "tmux last-pane || tmux last-window || tmux new-window"
+bind t          select-layout main-vertical
+bind C-t        resize-pane -Z
 bind -n C-y     select-pane -t :.+
 
 ## Views ##
