finally i setup for tmux1.9a

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,8 +45,8 @@ bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
 bind -n C-right next-window
 bind -n C-left  previous-window
 bind p          previous-window
-bind -n C-up    new-window -n "new"
-bind N          new-window
+bind -n C-up    new-window -n "new"  -c "#{pane_current_path}"
+bind N          new-window  -c "#{pane_current_path}"
 bind Down       kill-window
 bind X          kill-window
 bind M          kill-window
@@ -67,7 +67,8 @@ bind h          select-pane -L
 bind j          select-pane -D
 bind k          select-pane -U
 bind l          select-pane -R
-bind |          split-window -h
+bind |          split-window -h -c "#{pane_current_path}"
+bind '"'        split-window -v -c "#{pane_current_path}"
 bind e          select-layout even-horizontal
 # bind C-t        display-panes
 #bind C-t        select-layout main-vertical
