--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,6 +117,8 @@ bind S setw synchronize-panes
 ## Import local settings ##
 source-file ~/.tmux.conf.local
 
+bind D neww "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}')"
+
 ## Shortcutkey
 bind P send-keys 192.168.
 bind G send-keys "git pull" C-m
